Project Portfolio Website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,90 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Jason G. Amora - Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <nav class="navbar">
+      <h1 class="logo">Jason G. Amora</h1>
+      <ul class="nav-links">
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#blog">Blog</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><button id="toggle-dark">🌙</button></li>
+      </ul>
+    </nav>
+  </header>
+
+  <section class="hero">
+    <h2>Hello, I'm Jason 👋</h2>
+    <p>Creative Developer | Designer | Thinker</p>
+    <a href="#projects" class="btn">View Work</a>
+    <a href="#contact" class="btn secondary">Contact Me</a>
+  </section>
+
+  <section id="about" class="section">
+    <h2>About Me</h2>
+    <p>I’m passionate about turning ideas into digital experiences. Whether it’s building websites, designing interfaces, or writing insightful blog posts, I bring creativity and precision to every project.</p>
+  </section>
+
+  <section id="projects" class="section">
+    <h2>Projects</h2>
+    <div class="grid">
+      <div class="card">Project 1</div>
+      <div class="card">Project 2</div>
+      <div class="card">Project 3</div>
+    </div>
+  </section>
+
+  <section id="skills" class="section">
+    <h2>Skills</h2>
+    <div class="tags">
+      <span>HTML</span>
+      <span>CSS</span>
+      <span>JavaScript</span>
+      <span>React</span>
+      <span>Figma</span>
+    </div>
+  </section>
+
+  <section id="blog" class="section">
+    <h2>Blog</h2>
+    <div class="grid">
+      <div class="card">
+        <h3>Why I Love Frontend</h3>
+        <p>Exploring the balance of beauty and function...</p>
+      </div>
+      <div class="card">
+        <h3>Design Tips for Developers</h3>
+        <p>Make your projects look as good as they work...</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="contact" class="section">
+    <h2>Contact Me</h2>
+    <form>
+      <input type="text" placeholder="Your Name" required />
+      <input type="email" placeholder="Your Email" required />
+      <textarea placeholder="Your Message" required></textarea>
+      <button type="submit" class="btn">Send</button>
+    </form>
+    <div class="socials">
+      <a href="#">LinkedIn</a> | <a href="#">GitHub</a> | <a href="#">Email</a>
+    </div>
+  </section>
+
+  <footer>
+    <p>© 2025 Jason G. Amora</p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
 
