--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Jason G. Amora - Portfolio</title>
+  <title>Jason G. Project - Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <nav class="navbar">
-      <h1 class="logo">Jason G. Amora</h1>
+      <h1 class="logo">Jason G. Portfolio</h1>
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
         <li><a href="#projects">Projects</a></li>
@@ -81,7 +81,7 @@
   </section>
 
   <footer>
-    <p>© 2025 Jason G. Amora</p>
+    <p>© 2025 Jason G. Project</p>
   </footer>
 
   <script src="script.js"></script>
