--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <nav class="navbar">
-      <h1 class="logo">Jason G. Portfolio</h1>
+      <h1 class="logo">My Portfolio</h1>
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
         <li><a href="#projects">Projects</a></li>
