--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Jason G. Project - Portfolio</title>
+  <title>Jason G. Project - My Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -22,7 +22,7 @@
   </header>
 
   <section class="hero">
-    <h2>Hello, I'm Jason 👋</h2>
+    <h2>Hello, I'm Jason G. 👋</h2>
     <p>Creative Developer | Designer | Thinker</p>
     <a href="#projects" class="btn">View Work</a>
     <a href="#contact" class="btn secondary">Contact Me</a>
@@ -81,10 +81,9 @@
   </section>
 
   <footer>
-    <p>© 2025 Jason G. Project</p>
+  <p>Jason G. Project © 2025 My Portfolio</p>
   </footer>
 
   <script src="script.js"></script>
 </body>
 </html>
-
